--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
 </div>
 
 
+<script src="https://apis.google.com/js/plusone.js"></script>
 <script type="text/javascript">var switchTo5x=true;</script>
 <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "7e472055-949e-4137-82de-cc81da421c4f", doNotHash: true, doNotCopy: true, hashAddressBar: false});</script>
