# add document meta properties # document titles # responsive tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Soapee</title>
-    <meta name="description" content="">
+    <meta name="description" content="Soapee is a Saponification Calculator and a Soap Recipe Database">
     <meta name="viewport" content="width=device-width">
 
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
