# package font-awesome locally as the CDN appears to be lagging

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <title>Soapee</title>
     <meta name="description" content="Soapee is a Saponification Calculator and a Soap Recipe Database">
     <meta name="viewport" content="width=device-width">
-
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <meta name="google-site-verification" content="awwz5nNBHKNEN-NMvBsQp2oPOSUHqJ86MeBvRXnM2oQ" />
+    <link rel='shortcut icon' type='image/png' href='/favicon.png' />
 </head>
 
 <body>
