--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Soapee</title>
-    <meta name="description" content="Soapee is a Saponification Calculator and a Soap Recipe Database">
+    <meta name="description" content="Soapee is a Saponification Soap Calculator and a Soap Recipe Database">
     <meta name="viewport" content="width=device-width">
     <meta name="google-site-verification" content="awwz5nNBHKNEN-NMvBsQp2oPOSUHqJ86MeBvRXnM2oQ" />
     <link rel='shortcut icon' type='image/png' href='/favicon.png' />
