--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,10 @@
 </div>
 
 
+<!--SDKs-->
+<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4"></script>
+<script type="text/javascript" src="https://apis.google.com/js/platform.js"></script>
+
 <!--The application-->
 <script type="text/javascript" src="/bundle/vendor.js"></script>
 <script type="text/javascript" src="/bundle/app.js"></script>
