--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Soapee is a Saponification Soap Calculator and a Soap Recipe Database">
     <meta name="viewport" content="width=device-width">
     <meta name="google-site-verification" content="awwz5nNBHKNEN-NMvBsQp2oPOSUHqJ86MeBvRXnM2oQ" />
+    <meta property="og:image" content="http://soapee.com/logo.jpg" />
     <link rel='shortcut icon' type='image/png' href='/favicon.png' />
 </head>
 
