fix: total batch always 0

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title>Soapee</title>
-    <meta name="description" content="Soapee is a Saponification Soap Calculator and a Soap Recipe Database">
+    <title>Soapee Lye Calculator</title>
+    <meta name="description" content="Soapee is a Soap Lye Calculator and a Soap Recipe Database">
     <meta name="viewport" content="width=device-width">
     <meta name="google-site-verification" content="awwz5nNBHKNEN-NMvBsQp2oPOSUHqJ86MeBvRXnM2oQ" />
     <meta property="og:image" content="http://soapee.com/logo.jpg" />
