--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
 
 
 <!--SDKs-->
-<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4"></script>
-<script type="text/javascript" src="https://apis.google.com/js/platform.js"></script>
+<script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js" async></script>
+<script type="text/javascript" src="https://apis.google.com/js/platform.js" async></script>
 
 <!--The application-->
 <script type="text/javascript" src="/bundle/vendor.js"></script>
